--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "label-edit": "^0.1.0",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "vue-class-component": "^7.2.5",
+    "vue-input-facade": "^1.3.1",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
   },
