--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "label-edit": "^0.1.0",
+    "material-icons": "^0.3.1",
+    "v-dialogs": "^2.1.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.5",
-    "vue-input-facade": "^1.3.1",
+    "vue-input-facade": "^1.3.2",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.4.3",
+    "vue-simple-alert": "^1.1.1",
+    "vuesax": "^3.11.17"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
