--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,11 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+
 pnpm-debug.log*
+package-lock.json
+ts
 
 # Editor directories and files
 .idea
